--- a/card.html
+++ b/card.html
@@ -11,44 +11,113 @@
 
 </head>
 <style>
+    *{
+        padding: 0;
+        margin: 0;
+        overflow-x: hidden;
+    }
     .picture{
         background-image: url(https://picsum.photos/id/237/200/300) ;
-        width: 300px;
-        height: 300px;
+        width: 800px;
+        height: 588px;
         transition:all 2s -.2s;
+        background-size: cover;
+    }
+    #space{
+        width: 425px;
+        height: 200px;
+        background-color: cornflowerblue;
+        margin: 10px;
+    }
+    #space1{
+        width: 425px;
+        height: 200px;
+        background-color: darkblue;
+        margin: 10px;
+    }
+    #space2{
+        width: 425px;
+        height: 200px;
+        background-color: black;
+        margin: 10px;
+    }
+    #dog{
+        margin:3px;
+    }
+    #dogg{
+        margin: 3px;
     }
 </style>
 
 <body>
-    <p id="gogo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eos distinctio doloribus, vitae aperiam magni maiores aspernatur inventore ut quibusdam in impedit voluptas veniam nihil tenetur minima libero quas nesciunt?</p>
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <div class="card"   style="width: 18rem;">
-                   <div class="picture" id="mouseenterr" ></div>
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="col-6">
-                <div class="card"  style="width: 18rem;" >
-                    <img src="https://picsum.photos/id/237/200/300" id="mouseenterr" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                    </div>
-                </div>
-
-
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
         </div>
-
+      </nav>
+   <div class="row justify-content-around">
+    <div class="col-3 " id="space">
 
     </div>
+    <div class="col-3 " id="space1">
+
+    </div>
+    <div class="col-3 " id="space2">
+
+    </div>
+
+
+
+
+   </div>
+
+
+
+   <div class="row justify-content-around">
+    <div class="col-7" id="dog">
+        <div class="picture" id="mouseenterr" ></div>
+        <p>With supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="col-4" id="dogg">
+        <div class="picture" id="mouseenterr" ></div>
+        <p>With supporting text below as a natural lead-in to additional content.</p>
+    </div>
+
+
+   </div>
+   <div class="row justify-content-around">
+    <div class="col-5" id="dog">
+        <div class="picture" id="mouseenterr" ></div>
+        <p>With supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="col-5" id="dogg">
+        <div class="picture" id="mouseenterr" ></div>
+        <p>With supporting text below as a natural lead-in to additional content.</p>
+    </div>
+   </div>
+
+
+
+
+
+
 
 
 
@@ -72,11 +141,11 @@
 //   $('p').on('mouseout',function(){
 //       console.log('mouseout');
 //   })     
-$('#mouseenterr').on('mouseenter',function(){
+$('.picture').on('mouseenter',function(){
     console.log('mouseon');
       $(this).css('background-image','url(https://picsum.photos/seed/picsum/200/300)');
 })
-$('#mouseenterr').on('mouseout',function(){
+$('.picture').on('mouseout',function(){
     console.log('mouseout');
       $(this).css('background-image','url(https://picsum.photos/id/237/200/300)');
 })
