--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         padding: 0;
         margin: 0;
         overflow-x: hidden;
+        
     }
     .picture{
         background-image: url(https://picsum.photos/id/237/200/300) ;
@@ -24,23 +25,25 @@
         background-size: cover;
     }
     #space{
-        width: 425px;
-        height: 200px;
-        background-color: cornflowerblue;
-        margin: 10px;
+        width: 100%;
+        height: 600px;
+        background-color: #f8f9fa;
+        display: flex;
+        justify-content:center;
     }
     #space1{
-        width: 425px;
-        height: 200px;
-        background-color: darkblue;
-        margin: 10px;
+        width: 40%;
+        height: 300px;
+        background-color: rgb(239,238,241);
+        margin: -30px;
+        z-index: 1;
     }
     #space2{
-        width: 425px;
-        height: 200px;
-        background-color: black;
-        margin: 10px;
+       z-index: 2;
+       font-family: Fantasy;
+       font-size: 16px;
     }
+    
     #dog{
         margin:3px;
     }
@@ -50,7 +53,7 @@
 </style>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -72,20 +75,12 @@
           </ul>
         </div>
       </nav>
-   <div class="row justify-content-around">
-    <div class="col-3 " id="space">
+    <div  id="space">
+    <p id="space2">salce hsieh <br>Portfolio</p>
+    <div id="space1">
+
 
     </div>
-    <div class="col-3 " id="space1">
-
-    </div>
-    <div class="col-3 " id="space2">
-
-    </div>
-
-
-
-
    </div>
 
 
