--- a/index.html
+++ b/index.html
@@ -11,43 +11,59 @@
 
 </head>
 <style>
-    *{
+    * {
         padding: 0;
         margin: 0;
         overflow-x: hidden;
-        
+
     }
-    .picture{
-        background-image: url(https://picsum.photos/id/237/200/300) ;
+
+    .picture {
+        background-image: url(https://picsum.photos/id/237/200/300);
         width: 800px;
         height: 588px;
-        transition:all 2s -.2s;
+        transition: all 2s -.2s;
         background-size: cover;
     }
-    #space{
+
+    #space {
         width: 100%;
         height: 600px;
         background-color: #f8f9fa;
         display: flex;
-        justify-content:center;
+        justify-content: center;
     }
-    #space1{
+
+    #space1 {
         width: 40%;
         height: 300px;
-        background-color: rgb(239,238,241);
+        background-color: rgb(239, 238, 241);
         margin: -30px;
         z-index: 1;
     }
-    #space2{
-       z-index: 2;
-       font-family: Fantasy;
-       font-size: 16px;
+
+    #space2 {
+        margin-top: 90px;
+        z-index: 2;
+        font-family: Fantasy;
+        font-size: 30px;
     }
-    
-    #dog{
-        margin:3px;
+
+    .word {
+        font-size: 20px;
+        margin-left: 15px;
     }
-    #dogg{
+    .word1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #dog {
+        margin: 3px;
+    }
+
+    #dogg {
         margin: 3px;
     }
 </style>
@@ -55,58 +71,69 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="input.html">登入 <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="input.html">登入 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
         </div>
-      </nav>
-    <div  id="space">
-    <p id="space2">salce hsieh <br>Portfolio</p>
-    <div id="space1">
+    </nav>
+    <div id="space">
+        <p id="space2">salce hsieh <br>Portfolio</p>
+        <div id="space1">
 
 
-    </div>
-   </div>
-
-
-
-   <div class="row justify-content-around">
-    <div class="col-7" id="dog">
-        <div class="picture" id="mouseenterr" ></div>
-        <p>With supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="col-4" id="dogg">
-        <div class="picture" id="mouseenterr" ></div>
-        <p>With supporting text below as a natural lead-in to additional content.</p>
+        </div>
     </div>
 
 
-   </div>
-   <div class="row justify-content-around">
-    <div class="col-5" id="dog">
-        <div class="picture" id="mouseenterr" ></div>
-        <p>With supporting text below as a natural lead-in to additional content.</p>
+
+    <div class="word1">
+        <p class="word">about me</p>
+        <p>Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. Vero porro incidunt at fugit.<br> Natus tempora odit aliquam nemo accusantium molestiae qui aperiam nulla? <br>Expedita natus excepturi inventore repellat consequatur repudiandae?</p>
     </div>
-    <div class="col-5" id="dogg">
-        <div class="picture" id="mouseenterr" ></div>
-        <p>With supporting text below as a natural lead-in to additional content.</p>
+
     </div>
-   </div>
+    </div>
+
+    <div class="row justify-content-around">
+        <div class="col-7" id="dog">
+            <div class="picture" id="mouseenterr"></div>
+            <p>With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="col-4" id="dogg">
+            <div class="picture" id="mouseenterr"></div>
+            <p>With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+
+
+    </div>
+
+
+    <div class="row justify-content-around">
+        <div class="col-5" id="dog">
+            <div class="picture" id="mouseenterr"></div>
+            <p>With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="col-5" id="dogg">
+            <div class="picture" id="mouseenterr"></div>
+            <p>With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+    </div>
 
 
 
@@ -129,25 +156,25 @@
     <!-- 先載入 END-->
 
     <script>
- $(document).ready(function () {
-//   $('p').on('mouseenter',function(){
-//       console.log('mouseon');
-//   })     
-//   $('p').on('mouseout',function(){
-//       console.log('mouseout');
-//   })     
-$('.picture').on('mouseenter',function(){
-    console.log('mouseon');
-      $(this).css('background-image','url(https://picsum.photos/seed/picsum/200/300)');
-})
-$('.picture').on('mouseout',function(){
-    console.log('mouseout');
-      $(this).css('background-image','url(https://picsum.photos/id/237/200/300)');
-})
+        $(document).ready(function () {
+            //   $('p').on('mouseenter',function(){
+            //       console.log('mouseon');
+            //   })     
+            //   $('p').on('mouseout',function(){
+            //       console.log('mouseout');
+            //   })     
+            $('.picture').on('mouseenter', function () {
+                console.log('mouseon');
+                $(this).css('background-image', 'url(https://picsum.photos/seed/picsum/200/300)');
+            })
+            $('.picture').on('mouseout', function () {
+                console.log('mouseout');
+                $(this).css('background-image', 'url(https://picsum.photos/id/237/200/300)');
+            })
 
 
 
- })
+        })
 
     </script>
 
